# ChangeLog for net-misc/dropbox
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dropbox/ChangeLog,v 1.36 2013/05/15 22:29:37 naota Exp $

  15 May 2013; Naohiro Aota <naota@gentoo.org> -dropbox-1.2.48-r1.ebuild,
  -dropbox-1.2.51-r2.ebuild, -dropbox-1.4.17.ebuild, -dropbox-1.4.23.ebuild,
  -dropbox-1.4.3-r1.ebuild, -dropbox-1.4.7-r1.ebuild, -dropbox-1.4.7-r2.ebuild:
  Drop old versions.

  14 May 2013; Agostino Sarubbo <ago@gentoo.org> dropbox-1.6.16.ebuild:
  Stable for x86, wrt bug #467898

  02 May 2013; Agostino Sarubbo <ago@gentoo.org> dropbox-1.6.16.ebuild:
  Stable for amd64, wrt bug #467898

*dropbox-2.0.8 (29 Apr 2013)

  29 Apr 2013; Naohiro Aota <naota@gentoo.org> +dropbox-2.0.8.ebuild:
  Version bump wrt #467724

  18 Feb 2013; Naohiro Aota ChangeLog:
  Update sign

*dropbox-1.6.16 (11 Feb 2013)

  11 Feb 2013; Naohiro Aota <naota@gentoo.org> +dropbox-1.6.16.ebuild:
  version bump. #454622

  07 Feb 2013; Ulrich Müller <ulm@gentoo.org> dropbox-1.2.48-r1.ebuild,
  dropbox-1.2.51-r2.ebuild, dropbox-1.4.3-r1.ebuild, dropbox-1.4.7-r1.ebuild,
  dropbox-1.4.7-r2.ebuild, dropbox-1.4.17.ebuild, dropbox-1.4.23.ebuild:
  Move Creative Commons licenses to shorter names.

*dropbox-1.4.7-r2 (26 Dec 2012)

  26 Dec 2012; Matthew Thode <prometheanfire@gentoo.org>
  +dropbox-1.4.7-r2.ebuild:
  making the depend on patchelf dependant on the rsync-bundled use flag for
  dropbox

*dropbox-1.4.23 (03 Dec 2012)

  03 Dec 2012;  <naota@gentoo.org> +dropbox-1.4.23.ebuild:
  Version bump; Add wxGTK dependency #443686

*dropbox-1.4.17 (30 Oct 2012)

  30 Oct 2012;  <naota@gentoo.org> +dropbox-1.4.17.ebuild:
  Add dropbox-1.4.17 for testing. #439200

  24 Sep 2012; Mike Frysinger <vapier@gentoo.org> dropbox-1.2.48-r1.ebuild,
  dropbox-1.2.51-r2.ebuild, dropbox-1.4.3-r1.ebuild, dropbox-1.4.7-r1.ebuild:
  QA_DT_HASH (old/deprecated) -> QA_FLAGS_IGNORED (new hotness).
