@@ -1,30 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX dropbox.conf 322 SHA256 b45db3c9676cfd8bf568ca5ce86a4e1a6b95cd604edeba2b3e2b3fb604e19ab4 SHA512 100a9480dc086e18972c25bbf554e47737dae43989fc7fe1d01173c2570e64792e64fa7d52a93ca53f3e1248b3b335fd838b5c7713dae937e919f0e6a99bb132 WHIRLPOOL 2093d21df44308b478654457bf753913b56cc64ff76dd037720dcf15ba061307fc65175cf32c3ae54a16dba32614b1f123aff3c69bad599651ed67be0685f791
 AUX dropbox.initd 1599 SHA256 c3d4a32aedd5391e40057a1cfa9a9dbc654c20894df7fa3462c28579ec4ae5e5 SHA512 1712c5c2429ec3aa355be7f14032f5da0651104b46d18e4c5e8c2a0085d96d89fea1833dccae6ad6a18f38bb96d326ba5077893f967cf41e472d40e8b27c5ada WHIRLPOOL 8bea0b5b7943f3c9514e7a66baf4874db23f8ad8565df8d0f36ba47dfa6462c414a9eb7d99b597570bbe1bdb424a9109c5fe51d44dc73c84f4fec1009e98c367
 DIST dropbox-lnx.x86-1.6.16.tar.gz 18849327 SHA256 dbef9f13410a454fb181793c7ff52be2ea9d17246ff6b3bce31bc2bd5c889f9d SHA512 a19d8d4e9ee9bae18690530585876c46f385dab44267bdf513cfd1e30f2ea8ced8cb520aef3c4097b5807c2974ce2243b5d78228d50cc2b7314ef77856109377 WHIRLPOOL 916bdd72d96546b958c082fb5587b13c6fa4eee0655a8ff341a9b019a7a1731b871639188d08e0f0b3856acb5a94f26871f9b3332e2766e6fad2e98f003b9f01
 DIST dropbox-lnx.x86-2.0.8.tar.gz 19989050 SHA256 d93b662869876b8bc1b9f7cfae11b487d63f4f677774dd1375750ac38e24455c SHA512 f18a61c1a3dd8b69a1b094d675128086e338f1635f8cc4604ab95f72dcfb2d47180145f99720bc59b76f032525811289b75a1d102817cd0cb30b06a4ba1c203e WHIRLPOOL 5721aa9c559f87f6ddf492a0f8d3acad4b156b3d7da4a6948d3824e9f962de18485deeca9f7a9714d9af3ea540e0fa208743eb7ccba2b3da8f529c32567e818c
+DIST dropbox-lnx.x86-2.2.8.tar.gz 20772183 SHA256 2d34628e3cbf004263ab0ab0da80ec5c3f590433fa981e4439499b4c4bf45b2f SHA512 8dacaaa14945ad41dfaa75abfee594b2ea56b381dabe1cac9958cdb94f92f75f84419d8c87bcc539dee5e2fb2c80ca5855862c930416e17d30dc2b616218164e WHIRLPOOL 4002d9c0cf10e7ff1e994edb2a5863256da5f9fec915f7e5a06dbb6d7d60ee504d546c0d3b11dfce5368741db7390a0b2a5b7174691957ac6c66511e20fad1d9
 DIST dropbox-lnx.x86_64-1.6.16.tar.gz 19611600 SHA256 da70e74ccf8f5c2d3e60e3eaefbd3f5b0a58fe4e4d8d45a4a10730a8866ec6c2 SHA512 48f9805634e51850d10c30f1167a0c1145c69b2874607855fb31e1c0f1eefaa01545df7f945ff0ac0f838ae6fa8c2429a6f73b32ce9be1c504a48ee2a6eddf76 WHIRLPOOL 787bf66508ad235d9e1869b8d207a7c8bfd88f8076465b1c169a679739c48a29870c2261fb4981f00f9e86d618d4d58f3ba0c765cb8c266da0cf19cd1b4bac78
 DIST dropbox-lnx.x86_64-2.0.8.tar.gz 20753548 SHA256 0594b2a643b2fab9cff692e2a4056c6ba4ba1e4241dfedb8ec3eb2083c75aa9e SHA512 329a8ffc80bebc9ca01918794689803b0315f930fd2731c7dd16a8603a0e2d6222996351c5e6023a4e4823e5c09765d19a2f324bbe3ab168ac7fa89ce98e88af WHIRLPOOL e2ac3b5f7d8dd92f0b57a1b6aca06a1a865c18dee042dea6258dc2cb03de1b33ebf7ce24a865b54c1045cb961ff997a30733066c90a27fd4c04648b1efbede88
+DIST dropbox-lnx.x86_64-2.2.8.tar.gz 21532329 SHA256 1e60138a9cc7f2305bdc301349651d3d17d1f2ab526b2576ba31cc9c2b5fa200 SHA512 0f3d7764e2a3e546a4e92d64b4ff9d927d858e56946f55bee0c4a3930869b2b53a4fbbce9ea02374eb4ea2925d48b48f371a4cda6f8a5f9bf8dcd61361596ff0 WHIRLPOOL 0a05dbcfd94a412c3e2dd27df8b8700d29fd8f10c9455e96bac11d50dbfcdd6b2a43850c6f6cd66847abc1c6ddabb863c45562d8c757013caf353fb110d21c40
 EBUILD dropbox-1.6.16.ebuild 2319 SHA256 f00586eba41a267a7aa0970d8bba462775006203ce25efd769f617f9d82adbd9 SHA512 2e8bdd67270f4e3faf6bb60b643a71711623ebeaeed9440c5fbc782527e533f2871b899478608bb9178dd776ea12a324bf266cc437522ca4f3f9e64fd60e03e8 WHIRLPOOL 4ca3a643e8717a6fe83b6daaa217f82bf5878accb4f577f0bb6edcc19b00d5a40e6a8216ad00de80f678bf3e7660678f1442854ec1825430d3a8a0a5d593d3cf
 EBUILD dropbox-2.0.8.ebuild 2322 SHA256 159dd66908eb3062293d0da65d6d5903cf35f820df537b8f08cf2848b19284a7 SHA512 63ea38f7c1824c0e9ed406e5a7ed5976f6e34fc5e7baaf5721bb7a9844bb95f7fa56daa52c10b3d93fee7759405dffd85db3254ac62a13bfea9017c59554b494 WHIRLPOOL 171443f6d00cd446e121a865ac5e08c388f8ceaea572ed4c813a05dc2e090bd822a774e6503c027b6c296af300065346570bfcea40396da37dedc169dcb51eae
-MISC ChangeLog 6228 SHA256 65fb166ebdd84df8811818ff5973b7df3f80bb05eee16a044a43002749a50cd4 SHA512 e7c834c0df47d3de827705f19cbcf6a25c7ea486e4fd201af37581911934fdb3ba3540fb9a1de373be1514b76290d01a56ec2c547fa947c3b54b6c55f9fd0ac0 WHIRLPOOL 6d7a9b03b7c13febe7d6cdf6fae9deb08d17815d6057fa191434a48968ab4961c8b9dccc451f508163a740f7acfa743c83afc4c847abe0c5be6c366b3c1e20e1
-MISC metadata.xml 285 SHA256 9aea162d0e73c42a22183dac59a6e57f5e695bc4020d41377aedd731a1a4ad5f SHA512 d5b85b34badc10a4e18457c94c47d13bac2a7a30c3d33ddd0d505d23e6faf60746d650fa2085bbd3a292cc0187bd03d099a211264f858273bed8d4ec1dd506da WHIRLPOOL 1e44d0937c7d2913c22025197d39b09eed3af3afa6cf6047ede0dd6bf17505af05422af26fe24729a1fa2085f374662cf432ebf37bac955dc0f9d8b4c146cba9
+EBUILD dropbox-2.2.8.ebuild 2313 SHA256 45edca023536a0966935ee9a16b47c567a3aebf87d7269326abf63bf7816dba2 SHA512 26a3d1c50109caa575fa77bb592c397c7cf194f77b7b5fcaa1cfc5b7568d60d222c339acc623994f3e813a7e3c3d4a951ada6af57a2df3370284137449c56b43 WHIRLPOOL 5bc0dc927c285d4b2840bec7221bd58ae6cb28780dec10496dc1130c7e5832284a2cc1128b7134232afb4571c94694d671f3f8c08b57a74fa18ba1dc67cdfc41
+MISC ChangeLog 6359 SHA256 b338e760cda2521e2e0403471b1db476a6e91387370c2cde31602f79778046e5 SHA512 ffb7b950fcaeab28b307dd6e43c5d9a01e0d7afc685daffeecd434b85749872d56580d6a96d3dfcacba18e700d66a883721170643d80c2a8e218e20458da6412 WHIRLPOOL de6cf35fa361ef9f22a33c8472446da6fd3c9dc6efcbad779f50b181629150069f5fdeef0a9459349760e9a4f34c6d2271c379ed2c5d12e9e0d1fd1feff0a543
+MISC metadata.xml 293 SHA256 8080bd70880d4e0c836cd4c517e65cdf6216c286317ed50a8eeab4162e34ff5c SHA512 393fa16e2d4b86b96b941f64cd143b23bbcd25708df7105a4cbb8d3b88599119e7403ea7acc9a21af3d6e9df36ffbac7921ac8bac2aff240361a7c885382f180 WHIRLPOOL 7f472367e05683054f2219c10a552b3ee6dd583206253cb3ca96b12f3c9ab5fdb944500d8dbe939123c365355e4aa1e2175f4a4b31071b9d7d624de36ce70ce3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRlAxbAAoJEDYO1FT4VRUUiD8P/0HE+aJ1/5u/4NhGOhDq0/kK
-2/SJMvt8YdzV2qUGtCqzBZLoZQiN/kg9HEEcEhdcZjhsvSMb9a/PWu/bU4Jedaas
-jeVSPNmyqPuofDmVGNwtRn0DEV4UIhwOLqLq8CZj8LeS+5vbPPpIhUSKLrVji1N1
-Kb+a8VPslPBIAs8aS4Y08F641AXcnnh/SkF8yh5o7B7ahzilduxpCMoECktyI6HG
-hIrzROVP41ohzB0NsVyTOaeC5jN/ur5NwindEv6yXn9BsduuNtlBORWs3rUV4kzU
-Bd4VGdQFmqHzbUWH5rJYO8Xh9BwtUlpaT0FucgJ8e9PK17D56wZTF1VyTY2iD8zv
-1iqAkblHwh0Rge/QcrBPE01NPgYXi2OHgPK2BDp5QO98bxUR4/iQhxVv38GhUHll
-QnS18C51nAl8xqDR6wrxmPTHfpUmRfROG5zjGJxphDjNeH0k81pqzgwmdBpbWfug
-rHG7ArpmToDi574zpUUiRYTKieFwvx03Vm2E8WK7Rc3q7IJgx5w+mkacmkiEF1hB
-L85WbY/WFVjqZ/QSxDc8wuQlRGNic5Gi2nmsaXwYGy2ykvijc2Ht0OVs1gIt9jhD
-e+lMX3VRP+Cxd3Kv7ku3mM9/vnJQSbrxFGqATsQFhQZP954PtxVuzs5jLxaBAU26
-07WLpXjRspI4L7lGwgef
-=F0hy
+iEYEAREKAAYFAlHSrH0ACgkQgAnW8HDreRY8ngCfV+BawDKST8jSXQmqf2znaAH4
+4EUAnRb1qYSqFxm8uMXjOuS6j0EN4XxM
+=ZaST
 -----END PGP SIGNATURE-----
