@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>naota@gentoo.org</email>
-	</maintainer>
-	<use>
-		<flag name="librsync-bundled">Use bundled librsync library</flag>
-	</use>
+  <maintainer>
+    <email>naota@gentoo.org</email>
+  </maintainer>
+  <use>
+    <flag name="librsync-bundled">Use bundled librsync library</flag>
+  </use>
 </pkgmetadata>
